# audiopy_ai

./: .gitignore  AI_ANALYSIS_GUIDE.md  INDEX.md  LICENSE  MANIFEST.in  README.md  README_TESTING.md  READY_TO_TEST.md  SETUP.md  TESTING.md  TESTING_OPTIONS.md  TESTING_QUICK_START.md  interactive_test.py  pyproject.toml  quick_test.py  sample-9s_analysis.json  setup.py  simple_usage_example.py  test_mp4_analysis.py
audiopy_ai/: __init__.py  ai_analysis.py  edit.py  io.py
audiopy_ai/effects/: __init__.py  filters.py  reverb.py  time.py
examples/: ai_analysis_examples.py  demoprocess.py
tests/: test1.py  test2.py  test_ai_analysis.py  test_core.py  test_edit.py  test_io.py
