[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiopy_ai"
version = "0.1.7"
description = "A generalised Python library for audio editing and effects with AI-powered analysis, inspired by OpenCV."
authors = [
    { name = "Lalit Mohane, Adarsh Kotawar, Swaraj Nalawade, Kaiwalya Joshi", email = "lalitmohane0275@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["audio", "dsp", "signal-processing", "ai", "speech-recognition", "audio-editing", "audio-effects", "huggingface", "transformers", "whisper", "deep-learning", "reverb", "equalizer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "soundfile>=0.10.0",
    "matplotlib>=3.4.0",
    "transformers>=4.20.0",
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
]

[project.optional-dependencies]
advanced = ["librosa>=0.9.0"]

[project.urls]
Homepage = "https://github.com/AudioPy/AudioPy"
Repository = "https://github.com/AudioPy/AudioPy.git"
Documentation = "https://github.com/AudioPy/AudioPy/blob/main/README.md"
Issues = "https://github.com/AudioPy/AudioPy/issues"
Changelog = "https://github.com/AudioPy/AudioPy/releases"

# This tells setuptools where to find packages
[tool.setuptools.packages.find]
where = ["."]